--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,5 +16,6 @@ test_script:
   - mvn --batch-mode clean package
 artifacts:
   - path: target/rust-libs/*
+  - path: target/nbm/*
 cache:
   - C:\Users\appveyor\.m2
